# code_ownership

./: .gitignore  .rubocop.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  code_ownership.gemspec  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  pull_request_template.md
config/: code_ownership.yml
ext/code_ownership/: Cargo.toml  extconf.rb
ext/code_ownership/src/: lib.rs
ext/code_ownership/tests/fixtures/valid_project/.github/: CODEOWNERS
ext/code_ownership/tests/fixtures/valid_project/config/: code_ownership.yml
ext/code_ownership/tests/fixtures/valid_project/config/teams/: bar.yml  foo.yml
ext/code_ownership/tests/fixtures/valid_project/tmp/cache/codeowners/: project-file-cache.json
ext/libcodeowners/: Cargo.toml  extconf.rb
ext/libcodeowners/src/: lib.rs
lib/: code_ownership.rb
lib/code_ownership/: cli.rb  code_ownership.bundle  configuration.rb  file_path_finder.rb  file_path_team_cache.rb  mapper.rb  private.rb  team_finder.rb  validator.rb  version.rb
lib/code_ownership/private/: codeowners_file.rb  configuration.rb  extension_loader.rb  file_path_finder.rb  file_path_team_cache.rb  for_file_output_builder.rb  glob_cache.rb  owner_assigner.rb  pack_ownership_validator.rb  (+3 more)
lib/libcodeowners/: libcodeowners.bundle
rakelib/: compile.rake  env.rake  helpers.rake  pkg.rake  spec.rake
sorbet/: config
sorbet/rbi/: manual.rbi  todo.rbi
sorbet/tapioca/: require.rb
spec/: spec_helper.rb  zeitwerk_spec.rb
spec/lib/: code_ownership_spec.rb
spec/support/: application_fixtures.rb
(+69 files in other folders)
